--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -27,3 +27,6 @@
 @import "content/product-pg/_tool-care";
 @import "content/product-pg/_rev-rel";
 @import "content/checkout/_cart";
+@import "content/checkout/_billing";
+@import "content/checkout/_shipping";
+@import "content/checkout/ty";
