--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -2,6 +2,9 @@
     Base
 ============= */
 
+
+
+
 .dropshaddow{
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -19,6 +22,11 @@ ul{
     }
 }
 
+.line{
+
+    border-top: 2px solid var(--sky10);
+}
+
 
 
 .parts{
@@ -27,66 +35,7 @@ ul{
     height: 382px;
 }
 
-.text-center{
 
-    text-align: center;
-    margin: auto;
-    vertical-align: middle;
-}
-
-
-.button-1{
-
-    
-    padding: 8px 60px;
-    border-radius: 16px;
-    border: none;
-    background-color:var(--sky60);
-    justify-content: center;
-    @include lg{
-
-        padding: 16px 100px;
-        font-size: 24px;
-
-
-    }
-
-    a{
-    color: white;
-   
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 33px;
-    text-decoration: none;
-
-    
-    }
-
-    
-    
-}
-
-a{
-
-    text-decoration: none;
-}
-
-.tc-button{
-
-    background-color: transparent;
-    border: none;
-    color: var(--sky60);
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    text-align: center;
-    text-decoration-line: underline;
-
-}
 
 .largeimages{
 
@@ -107,36 +56,7 @@ a{
 }
 
 
-h1{
 
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 33px;
-    color: var(--sky10);
-}
-
-h2{
-
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 22px;
-    color: var(--sky10);
-
-}
-
-
-p{
-    font-size: 16px;
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
-    color: var(--sky10);
-}
 
 
 .show-lg{
@@ -148,57 +68,120 @@ p{
     }
 }
 
-button{
-    border: none;
-    border-radius: 16px;
+.show-sm{
+
+    display: block;
+    @include md{
+        display: none;
+    }
 }
+
+
+
 
 .cards{
 
     background-color: var(--cantelope100);
     border-radius: 16px;
-    padding: 20px;
-    h1{
-        font-family: 'Noto Sans';
-        font-weight: 600;
-        color: var(--sky60);
-
-
-
-    }
+    padding:  8px 20px;
+    max-width: 400px;
 
     h2{
         font-size: 20px;
-        font-family: 'Noto Sans';
-        font-weight: 600;
+        
     }
 
     div{
         display: flex;
         justify-content: space-between;
+        align-content: flex-end;
+        aside{
+           
+            display: flex;
+            
+            
+            img{
+                height: 50%;
+                align-self: center;
+            
+            }
+        }
     }
 
 
 }
 
-.checkout-info{
 
-    padding: 20px;
+.tycards{
 
-    input{
-        width: 100%;
-        border: none;
-        background-color: aqua;
+    background-color: var(--cantelope100);
+    border-radius: 16px;
+    padding:  8px 20px;
+    // display: flex;
+    // flex-direction: column;
+   // gap: 4px;
+
+    @include lg{
+        width: 300px;
+    }
+    
+
+    h2{
+        font-size: 20px;
+        
     }
 
     div{
         display: flex;
         justify-content: space-between;
-        gap: 16px;
+        align-content: flex-end;
+        aside{
+           
+            display: flex;
+            
+            
+            img{
+                height: 40%;
+                align-self: center;
+            
+            }
+        }
     }
 
-    #checkout-buttons{
-        margin-top: 20px;
-    }
+
 }
+
+
+
+.checkout-styling{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". billing .";
+    padding-bottom: 80px;
+    background-image:linear-gradient(180deg, #E1CABA -4.15%, #CBA086 24.83%, #91472D 100%);
+
+
+
+    >div{
+        grid-area: billing;
+        margin-top: 60px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        @include lg{
+            flex-direction: row-reverse;
+            margin: 180px;
+        }
+
+    }
+
+
+
+}
+
+
+
+
 
