--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -9,3 +9,46 @@ body{
 h1,h2{
     font-weight: 500;
 }
+
+h1{
+
+    font-family: 'Noto Serif';
+    font-style: normal;
+    
+    font-size: 24px;
+    line-height: 33px;
+    color: var(--sky10);
+}
+
+h2{
+
+    font-family: 'Noto Serif';
+    font-style: normal;
+   
+    font-size: 24px;
+    line-height: 22px;
+    color: var(--sky10);
+
+}
+
+
+p{
+    font-size: 16px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    color: var(--sky10);
+}
+
+a{
+
+    text-decoration: none;
+}
+
+.text-center{
+
+    text-align: center;
+    margin: auto;
+    vertical-align: middle;
+}
