--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,117 @@
 /* =============
     Buttons
 ============= */
+
+button{
+    border: none;
+    border-radius: 16px;
+}
+
+.button-1{
+
+    
+    padding: 8px 60px;
+    border-radius: 16px;
+    border: none;
+    background-color:var(--sky60);
+    justify-content: center;
+    font-size: 24px;
+    @include lg{
+
+        padding: 16px 100px;
+        font-size: 24px;
+
+
+    }
+
+    a{
+    color: white;
+   
+    font-family: 'Noto Serif';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 33px;
+    text-decoration: none;
+
+    
+    }
+
+
+}
+
+.button-2{
+
+    
+    padding: 8px 60px;
+    border-radius: 16px;
+    border: none;
+    background-color:var(--sky60);
+    justify-content: center;
+    font-size: 24px;
+
+    a{
+
+    color: white;
+    font-family: 'Noto Serif';
+    font-style: normal;
+    font-size: 20px;
+    text-decoration: none;
+
+    h1{
+        color: white;
+    }
+
+    
+    }
+
+
+}
+
+.button-3{
+
+    
+    background-color:var(--sky60);
+    justify-content: center;
+
+    margin-top: 20px;
+
+    a{
+
+   
+       
+
+    color: white;
+    font-family: 'Noto Serif';
+    font-style: normal;
+    font-size: 16px;
+    text-decoration: none;
+
+    h1{
+        color: white;
+        padding: 0px 16px;
+    }
+
+    
+    }
+
+
+}
+
+
+
+
+.tc-button{
+
+    background-color: transparent;
+    border: none;
+    color: var(--sky60);
+    font-family: 'Noto Serif';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    text-decoration-line: underline;
+
+}
