--- a/dev/scss/content/Checkout/_ty.scss
+++ b/dev/scss/content/Checkout/_ty.scss
@@ -16,6 +16,7 @@
         grid-area: thankyou;
         margin-top: 60px;
 
+
      
     
 
@@ -24,6 +25,8 @@
             flex-direction: column;
             gap: 20px;
             justify-content: center;
+            margin-top: 40px;
+            
 
             @include lg{
                 flex-direction: row;
