--- a/dev/scss/content/product-pg/_tool-care.scss
+++ b/dev/scss/content/product-pg/_tool-care.scss
@@ -8,9 +8,10 @@
     padding-top: 50px;
     line-height: 0;
     padding: 16px;
+    
 
     @include lg{
-        padding-top: 60px;
+        padding: 160px;
     }
 
 
@@ -133,10 +134,11 @@ img{
 
         @include md{
             margin-top: 80px;
-            margin-bottom: -100px;
+           
         }
 
         @include lg{
-            margin-top: 100px;
+            margin-top: 120px;
+            margin-bottom: -180px;
         }
     }
