--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,11 +1,95 @@
 /* =============
     Header
 ============= */
+header{
 
-#header{
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-template-areas: 
+    "logo burger"
+    "nav nav";
+    padding: 16px;
+    position: fixed;
+    width: 100%;
+    background-color: white;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(42, 48, 54, 0.3);
+
+    @include lg{
+        grid-template-areas: "logo nav";
+    }
+
+    #logo{
+        grid-area: logo;
+        display: flex;
+        align-items: center;
+    }
+
+    #burger-container{
+        grid-area: burger;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        @include lg{
+            display: none;
+        }
+
+        button{
+            border: none;
+            background-color: transparent;
+            color: black;
+            font-size: rem-calc(20);
+        }
+    }
 
 
+
+    nav{
+        grid-area: nav;
+
+      ul{
+        display: flex;
+        justify-content: space-between;
+
+        li{
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            text-align: center;
+
+            form{
+                
+                display: flex;
+                
+
+                
+
+                input{
+                    display: none;
+                    @include lg{
+                        display: block;
+                    }
+                    
+
+                    button{
+                        
+
+                       margin-left: auto;
+                       width: 100%;
+                        
+                        a{
+                            
+                            i{
+                                
+            
+                            }
+                        }
+                    }
+                }
+            }
+        }
+      }
+
+    }
 }
-
-
-
