--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -27,6 +27,7 @@ $screen-xl-min: 1200px;
   --sky10:#454F5F;
   --sky60:#576E8B;
   --sky90:#9DAAC0;
+  --sky100:#C2CAD8;
   --g-light:linear-gradient(90deg, rgba(225,202,186,1) 0%, rgba(203,160,134,1) 35%, rgba(145,71,45,1) 100%);
   --g-dark:linear-gradient(180deg, #E1CABA -4.15%, #CBA086 30.57%, #A15F45 99.99%, #91472D 100%);
 
