--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -1,3 +1,81 @@
 /* =============
     Navigation
 ============= */
+
+.show-menu{
+    display: block !important;
+}
+
+
+html{
+    scroll-behavior: smooth;
+}
+
+a:link, a:visited{
+    text-decoration:  none;
+}
+
+
+
+nav{
+    padding-top: 48px;
+    padding: 48px 20px 20px 20px;
+    
+    display: none;
+
+  
+
+    @include lg{
+        display: block;
+        padding: 20px;
+    }
+
+    ul{
+        @include lg{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            height: 100%;
+            gap: 40px;
+           
+            
+        }
+
+        li{
+            margin-bottom: 24px;
+            @include lg{
+                margin-bottom: 0;
+            }
+
+            a:link,a:visited{
+                color: var(--white);
+                font-size: rem-calc(20);
+                font-family: 'Noto Sans';
+                padding: 24px 0;
+                transition: 0.25s;
+
+                @include lg{
+                    padding: 0px 0px 0px 24px;
+                    font-size: rem-calc(16);
+                    font-weight: 300;
+                }
+
+                &:hover, &:active{
+                    color: var(--yellow);
+                }
+            }
+        }
+    }
+}
+
+.nav-icon{
+
+    color: var(--sky100);
+    
+   
+
+    @include lg{
+        color: var(--sky10);
+    }
+}
