--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,95 +1,159 @@
 /* =============
     Header
 ============= */
+
 header{
 
     display: grid;
     grid-template-columns: 50% auto;
-    grid-template-areas: 
-    "logo burger"
+    grid-template-areas: "logo logo"
+    "burger icons"
     "nav nav";
-    padding: 16px;
-    position: fixed;
-    width: 100%;
-    background-color: white;
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px rgba(42, 48, 54, 0.3);
+
+    padding-top: 30px;
+
+    background-color: var(--sky90);
 
     @include lg{
-        grid-template-areas: "logo nav";
+        grid-template-areas: "logo icons" 
+        "nav nav";
+
+       
     }
 
-    #logo{
+ 
+
+    #logo-nav{
+
         grid-area: logo;
+
+      
+
+        
+
+        a{
         display: flex;
-        align-items: center;
+        justify-content: center;
+        align-content: center;
+        // background-color: var(--sky60);
+        padding: 20px;
+
+        img{
+            width: 80%;
+
+
+            @include lg{
+                margin-right: auto;
+                margin-left: 40px;
+                width: 50%;
+            }
+        }
+
+    
+        }
     }
 
     #burger-container{
+
         grid-area: burger;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
+        padding: 20px;
+        background-color: var(--sky60);
+        
+        
+        #burger-btn{
+            background-color: transparent;
+
+        }
 
         @include lg{
             display: none;
-        }
-
-        button{
-            border: none;
-            background-color: transparent;
-            color: black;
-            font-size: rem-calc(20);
         }
     }
 
 
 
     nav{
+        background-color: var(--sky60);
         grid-area: nav;
+    }
 
-      ul{
+    #nav-icons{
+
+        grid-area: icons;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
+        align-content: flex-end;
 
-        li{
-            display: flex;
-            align-content: center;
-            justify-content: center;
-            text-align: center;
+        gap: 30px;
+        padding: 20px;
 
-            form{
-                
-                display: flex;
-                
+        background-color: var(--sky60);
+        // width: 100%;
 
-                
 
-                input{
-                    display: none;
-                    @include lg{
-                        display: block;
-                    }
-                    
-
-                    button{
-                        
-
-                       margin-left: auto;
-                       width: 100%;
-                        
-                        a{
-                            
-                            i{
-                                
+        @include lg{
+            gap: 40px;
+            margin-right: 40px;
+            background-color: transparent;
+            align-self: flex-end;
             
-                            }
-                        }
-                    }
-                }
-            }
+        }
+
+      a{
+        display: flex;
+        align-content: baseline;
+        i{
+            align-self: center;
         }
       }
 
+        
+        
+
+        #search-nav{
+           display: flex;
+
+
+
+            button{
+                background-color: transparent;
+                // display: inline;
+            }
+
+            
+            
+
+            input{
+
+                display: none;
+                
+
+                @include lg{
+                    display: block;
+                    margin-right: -35px;
+                    background-color: var(--sky100);
+                    border: none;
+                 
+                    border-radius: 8px;
+                    width: 300px;
+                    height: 40px;
+                    align-self: center;
+
+                    font-family: "Noto Sans";
+                    padding-left: 16px;
+
+                   
+                }
+            }
+
+        }
+
+
     }
+
+
+
+
+
+   
 }
