--- a/dev/scss/components/_forms.scss
+++ b/dev/scss/components/_forms.scss
@@ -19,11 +19,12 @@ textarea {
 
 .checkout-info{
 
-    padding: 20px;
+    
     background-color: var(--cantelope100);
     border-radius: 16px;
     padding: 8px 20px;
     max-width: 600px;
+    
 
     h1{
         font-size: 20px;
@@ -144,6 +145,7 @@ textarea {
         display: flex;
         justify-content: space-between;
         gap: 16px;
+        align-items: flex-end;
 
         form{
             width: 100%;
