--- a/dev/scss/content/product-pg/_related.scss
+++ b/dev/scss/content/product-pg/_related.scss
@@ -7,7 +7,13 @@
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". related .";
-    padding-bottom: 60px;
+    padding-bottom: 40px;
+    
+
+    @include lg{
+        padding-bottom: 60px;
+    }
+    
     
 
    
@@ -20,6 +26,7 @@
         background-color: var(--cantelope100);
         padding: 20px;
         border-radius: 16px;
+        
 
 
         h2{
@@ -31,8 +38,9 @@
         ul{
 
             display: grid;
-            grid-template-columns: 50% auto;
+            grid-template-columns: repeat(2,1fr);
             gap: 20px;
+            
 
             @include lg{
 
@@ -43,19 +51,24 @@
             li{
                 padding: 20px;
 
-                //padding: 20px;
+                padding: 20px;
                 background-color: var(--white);
                 border-radius: 16px;
                 text-align: center;
                 display: flex;
                 flex-direction: column;
+                
+
+                
   
                 
 
                 div{
+                    display: flex;
 
                     img{
                         width: 100%;
+                        
                         
                     }
                 }
@@ -85,9 +98,15 @@
                         background-color: var(--sky60);
                         border-radius: 6px;
 
+       
+
                         a{
 
                             color: var(--white);
+                            font-size: 14px;
+                            @include lg{
+                                font-size: 16px;
+                            }
 
 
                         }
