--- a/dev/scss/content/product-pg/_reviews.scss
+++ b/dev/scss/content/product-pg/_reviews.scss
@@ -7,7 +7,7 @@
 #reviews{
 
     display: grid;
-    grid-template-columns: 16px auto 16px;
+    grid-template-columns: 8px auto 8px;
     grid-template-areas: ". reviews .";
     padding-top: 100px;
    
@@ -26,7 +26,7 @@
             justify-self: center;
             border-radius: 16px;
             background-color: var(--cantelope100);
-            max-width: 800px;
+            //max-width: 800px;
             margin-bottom: 60px;
 
 
