--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -64,8 +64,12 @@
             padding-bottom: 50px;
 
             display: flex;
-            gap: 20px;
+            gap: 40px;
             justify-content: center;
+
+            img{
+                width: 25px;
+            }
         }
         p{
             text-align: center;
