--- a/dev/scss/components/_forms.scss
+++ b/dev/scss/components/_forms.scss
@@ -178,7 +178,7 @@ textarea {
         justify-content: center;
 
         button{
-            background-color: var(--white);
+            background-color: var(--cantelope100);
             width: 100%;
         
 
