--- a/dev/scss/content/product-pg/_reviews.scss
+++ b/dev/scss/content/product-pg/_reviews.scss
@@ -72,7 +72,7 @@
 
             }
 
-            #stars{
+            .stars{
                 display: flex;
                 align-content: center;
                  justify-content: center;
@@ -241,13 +241,6 @@
 
                 }
 
-                #stars-2{
-
-                    line-height: 0;
-                    margin: -8px 0;
-
-                    
-                }
 
 
             }
