--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -10,10 +10,14 @@ header{
     "burger icons"
     "nav nav";
 
+    
+
     //padding-top: 25px;
 
     background-color: var(--sky90);
     position: fixed;
+    top: 0;
+  left: 0;
     width: 100%;
     
 
